Fixed landing page font size on mobile

--- a/landing-page/landing.css
+++ b/landing-page/landing.css
@@ -362,6 +362,20 @@ template {
     background: url('bg.jpg') center center / cover no-repeat;
 }
 
+#content::after {
+    content: '';
+
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    height: 100%;
+
+    background: rgba(0, 0, 0, 0.3);
+}
+
 .landing-text {
     position: absolute;
     z-index: 2;
@@ -442,5 +456,13 @@ template {
         width: 100%;
         box-sizing: border-box;
         padding: 0 15%;
+    }
+
+    .heading-1 {
+        font-size: 32pt;
+    }
+
+    .heading-2 {
+        font-size: 12pt;
     }
 }
